# mtui

./: .bs-update-hooks  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.rst  FAQ  GNUmakefile  LICENSE  MANIFEST.in  Makefile  PLAN-highlevel.md  PLAN-phase0.md  PLAN-phase1.md  PLAN-phase2.md  PLAN-phase3.md  PLAN-phase4.md  PLAN-phase5.md  PLAN-phase6.md  PLAN-phase7.md  PLAN-phase8.md  PLAN.md  README  README.md  README.rst  SECURITY.md  _service  codecov.yml  config.py  connection.py  convert.py  export.py  hawk.toml  log.py  main.py  (+34 more)
crates/mtui-cli/: Cargo.toml
crates/mtui-cli/src/: completer.rs  edit.rs  highlighter.rs  history.rs  lib.rs  logfmt.rs  main.rs  notification.rs  prompt.rs  repl.rs  shell.rs  startup.rs
crates/mtui-cli/tests/: cli_smoke.rs
crates/mtui-config/: Cargo.toml
crates/mtui-config/src/: atomic.rs  error.rs  lib.rs  options.rs  paths.rs
crates/mtui-config/tests/: load.rs
crates/mtui-config/tests/fixtures/: config.toml
crates/mtui-core/: Cargo.toml  build.rs
crates/mtui-core/src/: args.rs  command.rs  display.rs  engine.rs  entrypoint.rs  error.rs  lib.rs  registry.rs  session.rs  template_registry.rs  wiring.rs
crates/mtui-core/src/commands/: addhost.rs  apicall.rs  approve.rs  checkers.rs  checkout.rs  commit.rs  config.rs  downgrade.rs  edit.rs  export.rs  help.rs  hostslock.rs  hoststate.rs  hostsunlock.rs  list_refhosts.rs  listbugs.rs  listhistory.rs  listhosts.rs  listlocks.rs  listmetadata.rs  listpackages.rs  listsessions.rs  listtimeout.rs  listupdatecommands.rs  listversions.rs  load_template.rs  localrun.rs  mod.rs  openqa_jobs.rs  openqa_overview.rs  perform.rs  prepare.rs  products.rs  quit.rs  reboot.rs  regenerate.rs  reload.rs  reload_openqa.rs  removehost.rs  request_review.rs  (+19 more)
crates/mtui-core/tests/: args.rs  e2e_run.rs  fanout.rs  help_listing.rs  template_registry.rs
crates/mtui-core/tests/snapshots/: args__help.snap  help_listing__help_listing.snap
crates/mtui-core/tests/support/: mod.rs
crates/mtui-datasources/: Cargo.toml
crates/mtui-datasources/benches/: datasources.rs
crates/mtui-datasources/src/: error.rs  gitea.rs  http.rs  lib.rs  oscqam.rs  slack.rs  teregen.rs
crates/mtui-datasources/src/obs/: auth.rs  client.rs  errors.rs  facade.rs  inference.rs  mod.rs  models.rs  oscrc.rs  preconditions.rs  qam.rs  sshsig.rs
crates/mtui-datasources/src/openqa/: base.rs  client.rs  install.rs  kernel.rs  mod.rs  standard.rs
crates/mtui-datasources/src/oqa_search/: heuristics.rs  mod.rs  render.rs  results.rs  search.rs
crates/mtui-datasources/src/qem_dashboard/: client.rs  dashboard_openqa.rs  incident.rs  mod.rs
crates/mtui-datasources/src/refhost/: mod.rs  models.rs  resolvers.rs  store.rs  verify.rs
crates/mtui-datasources/tests/: gitea.rs  http_client.rs  it.rs  obs_auth.rs  obs_client.rs  obs_facade.rs  obs_oscrc.rs  obs_qam.rs  obs_sshsig.rs  openqa.rs  oqa_search.rs  oscqam.rs  qem_dashboard.rs  refhost.rs  slack.rs
crates/mtui-hosts/: Cargo.toml
crates/mtui-hosts/benches/: fanout.rs
crates/mtui-hosts/src/: error.rs  lib.rs  prompter.rs  target.rs
crates/mtui-hosts/src/connection/: mock.rs  mod.rs  sftp_session.rs  shell.rs  ssh.rs  timeout.rs
crates/mtui-hosts/tests/: fanout_spinner_production_runtime.rs  fanout_spinner_visible.rs  history_append.rs  it.rs  lock_format.rs  operation_group.rs  sftp_traversal.rs  spinner_concurrent_logging.rs  ssh_integration.rs  target_parsers.rs
crates/mtui-hosts/tests/snapshots/: it__lock_format__lockfile_wire_format.snap
crates/mtui-mcp/: Cargo.toml  build.rs
crates/mtui-mcp/benches/: dispatch_concurrency.rs  mcp_jobs.rs
crates/mtui-mcp/src/: args.rs  argv.rs  capture.rs  concurrency.rs  deny.rs  lib.rs  main.rs  profiles.rs  provider.rs  runner.rs  schema.rs  server.rs  session.rs  slim.rs  testreport_tools.rs  tools.rs
crates/mtui-mcp/tests/: http_body_limit.rs  http_isolation.rs  it.rs  mcp_jobs.rs  mcp_version.rs  session_close.rs  session_concurrency.rs  session_registry.rs  slim_profile.rs  spike_roundtrip.rs  stdio_roundtrip.rs  testreport_tools.rs  tools_synthesis.rs
crates/mtui-mcp/tests/snapshots/: it__slim_profile__core_keep_set_snapshot.snap  it__slim_profile__slimmed_command_tool_schemas_snapshot.snap  it__testreport_tools__testreport_tool_schemas_snapshot.snap  it__tools_synthesis__tool_surface_snapshot.snap  slim_profile__slimmed_command_tool_schemas_snapshot.snap  testreport_tools__testreport_tool_schemas_snapshot.snap  tools_synthesis__tool_surface_snapshot.snap
crates/mtui-testreport/: Cargo.toml
crates/mtui-testreport/benches/: testreport.rs
crates/mtui-testreport/src/: lib.rs  lifecycle.rs  metadata_parsers.rs  testreport.rs
crates/mtui-testreport/src/checkout/: mod.rs  runner.rs  svn.rs
crates/mtui-testreport/src/export/: auto.rs  base.rs  downloader.rs  kernel.rs  manual.rs  mod.rs  overview_inject.rs
crates/mtui-testreport/src/products/: misc.rs  mod.rs  sle11.rs  sle12.rs  sle15.rs
crates/mtui-testreport/src/reports/: mod.rs  null.rs  obs.rs  pi.rs  repoparse.rs  sl.rs  update_flow.rs
crates/mtui-testreport/src/support/: filelist.rs  fileops.rs  mod.rs  sysinfo.rs
crates/mtui-testreport/src/update_workflow/: mod.rs  template.rs
crates/mtui-testreport/tests/: export_idempotency.rs  fs_responsiveness.rs  it.rs  lifecycle.rs  metadata_parsers.rs  null_report.rs  obs_report.rs  overview_inject.rs  pi_report.rs  products.rs  repoparse.rs  sl_report.rs  svn_io.rs  updateid_checkout.rs
crates/mtui-testreport/tests/snapshots/: it__overview_inject__overview_inject_block.snap  (+1 more)
crates/mtui-types/: Cargo.toml
crates/mtui-types/src/: enums.rs  error.rs  hostlog.rs  lib.rs  oqaresults.rs  package.rs  package_spec.rs  product.rs  refhost.rs  repo_url.rs  rpmver.rs  rrid.rs  shellquote.rs  system.rs  test.rs  updateid.rs  urls.rs  version.rs
crates/mtui-types/tests/: refhost.rs  rpmver.rs  rrid.rs  updateid.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: generate.rs
(+636 files in other folders)
