[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-2.0-only"       # match upstream mtui
repository = "https://github.com/openSUSE/mtui-rs"

[workspace.dependencies]
# runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# cli
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reedline = "0.42"
# ser/de + config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9" # or serde_yml; decide in Phase 1
directories = "6"
# http
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# ssh (Phase 2)
russh = "0.54"
russh-sftp = "2"
# mcp (Phase 7)
rmcp = "0.9"
# observability + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
# dev / test
insta = "1"
wiremock = "0.6"
# internal crates (path deps)
mtui-types = { path = "crates/mtui-types" }
mtui-config = { path = "crates/mtui-config" }
mtui-hosts = { path = "crates/mtui-hosts" }
mtui-datasources = { path = "crates/mtui-datasources" }
mtui-testreport = { path = "crates/mtui-testreport" }
mtui-core = { path = "crates/mtui-core" }

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "thin"
strip = true
