[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-2.0-only"       # match upstream mtui
repository = "https://gitlab.suse.de/osukup/mtui-rs"

[workspace.dependencies]
# runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# cli
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reedline = "0.49"
# ser/de + config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9" # or serde_yml; decide in Phase 1
toml = "1"
# XML parsing for /etc/products.d/*.prod product files (host system parser).
quick-xml = "0.38"
directories = "6"
# rpm version comparison — pure-Rust replacement for upstream's libc
# `rpm.labelCompare`, preserving the single-static-binary / no-runtime-deps
# contract. Verified against every upstream `test_rpm_version` golden vector.
sandogasa-rpmvercmp = "0.15"
# http
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
# openQA API auth: HMAC-SHA1 request signing (X-API-Hash), matching the
# third-party python `openqa_client` auth design (openQA/lib/OpenQA/client.pm).
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
# percent-encoding of the request path before HMAC signing (openQA quirks:
# %20 -> +, ~ -> %7E)
urlencoding = "2"
# regex — SMELT testplatform grammar parsing (refhost Attributes::from_testplatform)
regex = "1"
# HTML parsing — extract `.log` hrefs from the qam.suse.de build_checks directory
# index (oqa_search build-check overview), replacing upstream's minimal
# html.parser LogFileLinkParser.
scraper = "0.24"
# datetime — parse/sort Gitea comment `updated_at` timestamps (RFC3339 with
# offset), matching upstream `datetime.fromisoformat`. std only, no clock/oldtime
# baggage; keeps the single-static-binary contract clean.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# ssh (Phase 2)
russh = "0.62"
russh-sftp = "2"
async-trait = "0.1"
# mcp (Phase 7)
rmcp = "2"
# observability + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
# terminal color (CommandPromptDisplay) — supports_color-gated ANSI wrapping
owo-colors = "4"
# stable insertion-ordered map (TemplateRegistry entries) + per-registry id
indexmap = "2"
uuid = { version = "1", features = ["v4"] }
# dev / test
insta = "1"
wiremock = "0.6"
# internal crates (path deps)
mtui-types = { path = "crates/mtui-types" }
mtui-config = { path = "crates/mtui-config" }
mtui-hosts = { path = "crates/mtui-hosts" }
mtui-datasources = { path = "crates/mtui-datasources" }
mtui-testreport = { path = "crates/mtui-testreport" }
mtui-core = { path = "crates/mtui-core" }

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "thin"
strip = true
