[project]
name = "mtui"
description = "Maintenance Test Update Installer"
readme = "README.rst"
license = "GPL-2.0-only"
authors = [{ name = "Christian Kornacker", email = "ckornacker@suse.de" }]
maintainers = [
  { name = "SUSE QA Maintenance", email = "qa-maintenance@suse.de" }
]
keywords = ["Maintenance", "SUSE", "testing", "update"]
classifiers = [
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "looseversion",
  "openqa-client",
  "paramiko",
  "pyxdg",
  "requests",
  "ruamel.yaml"
]
dynamic = ["version"]

[project.scripts]
mtui = "mtui.main:main"

[project.optional-dependencies]
keyring = ["keyring"]
norpm = ["version_utils"]
notify = ["notify"]
rpm = ["rpm"]

[dependency-groups]
dev = ["coverage", "pytest", "pytest-cov", "responses", "ruff", "ty"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtui*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
mtui = [
  "scripts/**/*",
  "helper/*",
  "terms/*.sh",
]

[tool.setuptools.dynamic]
version = { attr = "mtui.__version__" }

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "PT",     # flake8-pytest-style
    "B027",   # empty method in abstract class without @abstractmethod
    "RUF005", # use iterable unpacking instead of concatenation
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade (modernize syntax for py311+)
    "FURB110",# if-exp instead of or-operator
    "RET505", # superfluous else after return
    "RET506", # superfluous else after raise
    "RET507", # superfluous else after continue
    "PLR5501",# collapsible else-if
    "D202",   # no blank lines after function docstring
    "D413",   # missing blank line after last docstring section
    "PTH201", # Path(".") -> Path()
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "ARG", "SLF001"]
"Documentation/conf.py" = ["INP001", "ERA001", "A001", "D"]
