[project]
name = "mtui"
description = "Maintenance Test Update Installer"
readme = "README.md"
license = "GPL-2.0-only"
authors = [{ name = "Christian Kornacker", email = "ckornacker@suse.de" }]
maintainers = [
  { name = "SUSE QA Maintenance", email = "qa-maintenance@suse.de" }
]
keywords = ["Maintenance", "SUSE", "testing", "update"]
classifiers = [
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.13"
dependencies = [
  "openqa-client",
  "paramiko",
  "prompt_toolkit",
  "pyxdg",
  "requests",
  "ruamel.yaml"
]
dynamic = ["version"]

[project.scripts]
mtui = "mtui.main:main"
mtui-mcp = "mtui.mcp.main:main"

[project.optional-dependencies]
keyring = ["keyring"]
mcp = ["mcp[cli]>=1.2"]
norpm = ["version_utils"]
notify = ["notify-py"]
rpm = ["rpm"]
completion = ["argcomplete>=3.0"]

[dependency-groups]
dev = [
  "coverage",
  "pytest",
  "pytest-cov",
  "responses",
  "ruff",
  "ty",
]
doc = [
  "sphinx>=9.0.4",
  "myst-parser>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: tests that take noticeably longer to run",
  "integration: tests that exercise multiple components together",
  "network: tests that perform real network I/O",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "B",  # flake8-bugbear (bug detection)
  "G",  # flake8-logging-format
  "N818",  # exception names should end in Error
  "PGH003",  # blanket type: ignore (require specific codes)
  "PT",  # flake8-pytest-style
  "C4",  # flake8-comprehensions
  "PERF",  # perflint (performance)
  "T20",  # flake8-print (no print statements)
  "RUF005",  # use iterable unpacking instead of concatenation
  "RUF012",  # mutable class defaults need ClassVar
  "SLF001",  # private member access
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade (modernize syntax for py311+)
  "FURB110",  # if-exp instead of or-operator
  "RET505",  # superfluous else after return
  "RET506",  # superfluous else after raise
  "RET507",  # superfluous else after continue
  "PLR5501",  # collapsible else-if
  "PLW0127",  # self-assigning variable
  "PLW1510",  # subprocess.run without check
  "PLW1641",  # __eq__ without __hash__

  "D200",  # single-line docstrings should fit on one line
  "D202",  # no blank lines after function docstring
  "D212",  # multi-line summary should start on first line
  "D400",  # first line should end with a period
  "D413",  # missing blank line after last docstring section
  "D415",  # first line should end with punctuation
  "ERA001",  # no commented-out code
  "PTH201",  # Path(".") -> Path()
]
ignore = [
  "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "ARG", "SLF001"]
"Documentation/conf.py" = ["INP001", "ERA001", "A001", "D"]
# Argparse exposes ``_actions`` and the per-action classes (``_StoreTrueAction``
# etc.) only via private names; the MCP synthesis layer has to dispatch on them
# to translate every command's parser into a tool schema.
"mtui/mcp/_schema.py" = ["SLF001"]
"mtui/mcp/_argv.py" = ["SLF001"]
"mtui/mcp/tools.py" = ["SLF001"]
# Hand-written testreport tools acquire the session-wide ``_lock`` to stay
# coherent with concurrent ``run_command`` dispatch.
"mtui/mcp/testreport_tools.py" = ["SLF001"]

[tool.ty.environment]
# Pin to the lowest version we support so we catch features that
# would only work on newer interpreters; the CI matrix exercises
# 3.13-3.14 separately.
python-version = "3.13"

[tool.ty.terminal]
# Promote warnings to errors so 'ty check' is a hard gate.
error-on-warning = true

# Strict-mode opt-in for well-typed surfaces. Keep the default rule
# set for the rest of mtui until the Phase 5 refactors land.
[[tool.ty.overrides]]
include = ["mtui/types/**", "mtui/data_sources/**"]

[tool.ty.overrides.rules]
all = "error"

# Desktop notifications are an optional extra (`notify-py`). CI runs `ty`
# without that extra installed, so the lazy ``from notifypy import Notify``
# is legitimately unresolved and needs ``# ty: ignore[unresolved-import]``.
# When a developer *does* install the extra the module resolves and the
# suppression becomes "unused"; don't let that flip the gate red.
[[tool.ty.overrides]]
include = ["mtui/cli/notification.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"

[tool.coverage.run]
# Branch coverage records both directions of every conditional, not merely
# whether the line executed. Most of mtui's branches are already exercised,
# so the headline number only dips ~1.5pp, but new code (the codecov/patch
# gate) must now cover the untaken guard arcs -- exactly where edge-case bugs
# hide. Only active when a run passes --cov (CI); a plain pytest run is
# unaffected.
branch = true
source = ["mtui"]

[tool.coverage.report]
# Suppress structurally-unreachable arcs that would otherwise show as
# permanently-partial branches (type-checking-only imports, abstract stubs,
# the __main__ guard).
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mtui*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
mtui = [
  "terms/*.sh",
]

[tool.setuptools.dynamic]
version = { attr = "mtui.__version__" }
