[package]
name = "mtui-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mtui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mtui-core.workspace = true
mtui-config.workspace = true
clap.workspace = true
anyhow.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
# `Workflow` drives the workflow-aware left prompt (`mtui[-mode]> `).
mtui-types.workspace = true
# `UpdateKind` maps the `-a`/`-k` workflow onto `Session::load_update` in the
# startup seeding path (upstream `run_mtui`'s pre-`cmdloop` `load_update`).
mtui-testreport.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
