[package]
name = "mtui-datasources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mtui-types.workspace = true
mtui-config.workspace = true
reqwest.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
scraper.workspace = true
chrono.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha1.workspace = true
hex.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock.workspace = true
insta.workspace = true
tempfile = "3"
