[package]
name = "mtui-hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mtui-types.workspace = true
mtui-config.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
futures.workspace = true
russh.workspace = true
russh-sftp.workspace = true
russh-config = "0.58"
quick-xml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
insta.workspace = true
# rand 0.10 to match russh 0.62's rand_core 0.10 (ssh-key's CryptoRng bound
# is tied to that exact rand_core; 0.9 pulls a second, incompatible copy).
# `rand::rng()` mirrors upstream russh's own key-gen in tests.
rand = "0.10"
russh-sftp = { workspace = true }
